// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarIcon component should render by default 1`] = `
<svg
  className=""
  fill="grey"
  height="25"
  width="23"
>
  <polygon
    points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
    style={
      Object {
        "fillRule": "nonzero",
      }
    }
  />
</svg>
`;

exports[`StarIcon component should render with props properly 1`] = `
<svg
  className="test"
  fill="green"
  height="25"
  width="23"
>
  <polygon
    points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
    style={
      Object {
        "fillRule": "nonzero",
      }
    }
  />
</svg>
`;
